fix text now being pushed off center

--- a/app/styles/components/_stations_list.scss
+++ b/app/styles/components/_stations_list.scss
@@ -74,8 +74,8 @@ ul.station-filters {
       color: #111;
     }
     > span.left {
-      position: absolute;
-      z-index: -1;
+      position: relative;
+      top: 5px;
     }
     > span.right {
       white-space: nowrap;
